--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 Jaii Bheemma
-<img src="assests/WhatsApp Image 2021-10-22 at 11.51.51.jpeg">
+<img src="assests/WhatsApp Image 2021-10-22 at 11.51.51.jpeg" width="100">
 </body>
 </html>
