--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <title>Portfolio</title>
 </head>
 <body>
-Jaii Bheemma
-<img src="assests/WhatsApp Image 2021-10-22 at 11.51.51.jpeg" width="100">
+<img src="assests/WhatsApp Image 2021-10-22 at 11.51.51.jpeg" >
 </body>
 </html>
