--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>Portfolio</title>
 </head>
 <body>
-<img src="assests/WhatsApp Image 2021-10-22 at 11.51.51.jpeg" >
+    <img src="assests/result-removebg-preview.png">
 </body>
 </html>
