--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>Portfolio</title>
 </head>
 <body>
+    <div style="border-radius: 20px;">
 <img src="assests/WhatsApp Image 2021-10-22 at 11.51.51.jpeg" >
+</div>
 </body>
-</html>
+</html> 
