--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div style="border-radius: 20px;">
-<img src="assests/WhatsApp Image 2021-10-22 at 11.51.51.jpeg" >
+<img src="assests/WhatsApp Image 2021-10-22 at 11.51.51.jpeg" width="100">
 </div>
 </body>
 </html> 
