--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 <head>
 <title>Portfolio</title>
+<style>
+    img {
+      border-radius: 50%;
+    }
+    </style>
 </head>
 <body>
-    <div style="border-radius: 20px;">
-<img src="assests/WhatsApp Image 2021-10-22 at 11.51.51.jpeg" width="100">
-</div>
+<img src="assests/WhatsApp Image 2021-10-22 at 11.51.51.jpeg" width="200px">
 </body>
 </html> 
