--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
   <nav class="navbar navbar-expand-lg bg-dark fixed-top">
     <div class="container-fluid text-uppercase p-2 ">
-      <a class="navbar-brand font-weight-bold text-white">SK</a>
+      <a class="navbar-brand font-weight-bold text-white">JB</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
