--- a/index.html
+++ b/index.html
@@ -438,64 +438,78 @@
 
   <!-- ***************************** Contact Me starts *************************************** -->
 
-  <section class="contact" id="contactdiv">
-    <div class="container headings text-center">
-
-      <!-- <h1 class="text-center font-weight-bold">Conatct Me</h1> -->
-
+  <section class="skills bg-1" id="skillsdiv"data-aos="fade-in">
+    <div class="container headings text-center" >
+      <h1 class="text-center font-weight-bold">Skills</h1>
     </div>
+    <section class="header-extradiv">
+      <div class="container">
+        <div class="row">
+          <div class="extra-div col-lg-4 col-md-4 col-12"data-aos="fade-in" >
+            <div data-aos="slide-up">
+              <h2>Languages</h2>
+            </div>
+             <div data-aos="fade-in">
+            <img src="image\skillsimg\python-logo-1.png" class="img-fluid img-thumbnail">
+            <img src="image\skillsimg\c++.jpg" class="img-fluid img-thumbnail">
+            <img src="image\skillsimg\java.png" class="img-fluid img-thumbnail">
+            <img src="image\skillsimg\c.png" class="img-fluid img-thumbnail">
+            </div>
 
-
-    <div class="container" data-aos="fade-in">
-      <div class="row">
-        <div class="contact-div col-lg-6 col-md-6 col-12 ">
-          <div class="myimage">
-            <img src="assests/WhatsApp Image 2021-10-22 at 11.51.51.jpeg" class="img-fluid img-thumbnail">
           </div>
-          <div class="centerdiv">
-            <a href="https://github.com/balaravanan" target="blank">
-              <i class="fab fa-github fa-3x"></i>
-            </a>
-            <a href="mailto:rajjaibalaji@gmail.com" target="blank">
-              <i class="fas fa-envelope fa-3x"></i>
-            </a>
-            <!-- <a href="https://www.instagram.com/sakshikumari____/" target="blank">
-              <i class="fab fa-instagram fa-3x"></i>
-            </a> -->
-            <a href="https://www.linkedin.com/in/jai-balaji-r-420171223/" target="blank">
-              <i class="fab fa-linkedin-in fa-3x"></i> </a>
+          <div class="extra-div col-lg-4 col-md-4 col-12"data-aos="fade-in">
+            <div data-aos="slide-up" >
+              <h2>Databases</h2>
+            </div>
+ <div data-aos="fade-in">
+            <img src="image\skillsimg\mysql-logo-1.png" class="img-fluid img-thumbnail">
+<!--             <img src="image\skillsimg\mongo.png" class="img-fluid img-thumbnail"> -->
+            <img src="image\skillsimg\oracle.png" class="img-fluid img-thumbnail">
+            <img src="image\skillsimg\phpmyadmin.png" class="img-fluid img-thumbnail">
+            </div>
           </div>
-        </div>
-
-        <div class="contact-div col-lg-6 col-md-6 col-12b msgbg ">
-
-          <h1 class="text-center font-weight-bold">Message Me 💬</h1>
-          <script type="text/javascript">var submitted=false;</script>
-
-          <!-- <form> -->
-            <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfoKiVSKa1848zBCMSJtmpVb_sXsvkjhaLyfu75Gwd3OCd9WA/formResponse" method="post" target="hidden_iframe" onsubmit="return validateForm(); ">
-            <!--  -->
-            <div class="mb-3">
-              <input type="text" class="form-control" id="name" placeholder="Enter Name"
-                aria-describedby="textHelp" required name="entry.1566475177">
+         
+          <div class="extra-div col-lg-4 col-md-4 col-12" data-aos="fade-in" >
+            <div data-aos="slide-up">
+              <h2>Web Development</h2>
             </div>
-            <div class="mb-3">
-              <input type="email" class="form-control" id="email" placeholder="Enter Email"
-                aria-describedby="textNumber" required name="entry.1173915243">
+          <div data-aos="fade-in">
+            <img src="image\skillsimg\html5.png" class="img-fluid img-thumbnail">
+            <img src="image\skillsimg\css3.png" class="img-fluid img-thumbnail">
+            <img src="image\skillsimg\javascript.png" class="img-fluid img-thumbnail">
+<!--             <img src="image\skillsimg\angular.png" class="img-fluid img-thumbnail"> -->
             </div>
-            <div class="mb-3">
-              <!-- <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label> -->
-              <textarea class="form-control" id="message" placeholder="Enter your Message"
-                rows="3"name="entry.334973977"></textarea>
+          </div>
+          <div class="extra-div col-lg-4 col-md-4 col-12">
+             <div data-aos="slide-up">
+              <h2>Frameworks</h2>
             </div>
-            <div class="d-flex justify-content-center form-button">
-              <button type="submit" class="btn btn-primary">Submit</button>
+ <div data-aos="fade-in">
+            <img src="image\skillsimg\django-logo.webp" class="img-fluid img-thumbnail">
+            <img src="image\skillsimg\bootstrap.png" class="img-fluid img-thumbnail">
+<!--             <img src="image\skillsimg\jquery.png" class="img-fluid img-thumbnail"> -->
             </div>
-          </form>
-          <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
+          </div>
+          <div class="extra-div col-lg-4 col-md-4 col-12" >
+            <div data-aos="slide-up">
+              <h2>Android Development</h2>
+            </div>
+ <div data-aos="fade-in">
+            <img src="image\skillsimg\android.png" class="img-fluid img-thumbnail">
+            <img src="image\skillsimg\flutter.png" class="img-fluid img-thumbnail">
+            </div>
+          </div>
+          <div class="extra-div col-lg-4 col-md-4 col-12" >
+            <div  data-aos="slide-up">
+              <h2>Competitive Coding</h2>
+            </div>
+            <a href="https://www.hackerrank.com/sakshi_kumari" target="blank">
+              <img src="image\skillsimg\hackerrank.jpg" class="img-fluid img-thumbnail">
+            </a>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
   </section>
 
 
