--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
  <div data-aos="fade-in">
             <!-- <img src="image\skillsimg\django-logo.webp" class="img-fluid img-thumbnail"> -->
             <img src="image\skillsimg\bootstrap.png" class="img-fluid img-thumbnail">
-<!--             <img src="image\skillsimg\jquery.png" class="img-fluid img-thumbnail"> -->
+            <img src="image\skillsimg\jquery.png" class="img-fluid img-thumbnail">
             </div>
           </div>
           <div class="extra-div col-lg-4 col-md-4 col-12" >
@@ -138,7 +138,7 @@
               <h2>Android Development</h2>
             </div>
  <div data-aos="fade-in">
-            <!-- <img src="image\skillsimg\android.png" class="img-fluid img-thumbnail"> -->
+            <img src="image\skillsimg\android.png" class="img-fluid img-thumbnail">
             <img src="image\skillsimg\flutter.png" class="img-fluid img-thumbnail">
             </div>
           </div>
