--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
   <section class="artgallery" id="artgallerydiv"data-aos="fade-in">
     <div class="container headings text-center">
       <br><br>
-      <h1 class="text-center font-weight-bold">Art Gallery</h1>
-      <p class="pt-1"> Painting makes me happy !</p>
+      <h1 class="text-center font-weight-bold">Repository Gallery</h1>
+      <p class="pt-1">!</p>
     </div>
 
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" >
