--- a/index.html
+++ b/index.html
@@ -297,45 +297,21 @@
           <div class="row">
             <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
-                <a href="#"><img src="image/drawing/krishna.jpg" class="img-fluid img-thumbnail"></a>
+                <a href="#"><img src="image/drawing/1-.jpg" class="img-fluid img-thumbnail"></a>
 
                 <!-- <p class="m-4">Painting</p> -->
               </div>
             </div>
             <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
-                <a href="#"><img src="image/drawing/eye.jpg" class="img-fluid img-thumbnail"></a>
+                <a href="#"><img src="image/drawing/170227maxisnext03.jpg" class="img-fluid img-thumbnail"></a>
 
                 <!-- <p class="m-4">Painting</p> -->
               </div>
             </div>
             <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
-                <a href="#"><img src="image/drawing/peacockrangoli.jpg" class="img-fluid img-thumbnail"></a>
-
-                <!-- <p class="m-4">Painting</p> -->
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="row">
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/drawing/bomb.jpg" class="img-fluid img-thumbnail"></a>
-
-                <!-- <p class="m-4">Painting</p> -->
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/drawing/girlpen.jpg" class="img-fluid img-thumbnail"></a>
-
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/drawing/zebra.jpg" class="img-fluid img-thumbnail"></a>
+                <a href="#"><img src="image/drawing/230345j484098o8uh54w9n.png" class="img-fluid img-thumbnail"></a>
 
                 <!-- <p class="m-4">Painting</p> -->
               </div>
@@ -346,44 +322,20 @@
           <div class="row">
             <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
-                <a href="#"><img src="image/drawing/night.jpg" class="img-fluid img-thumbnail"></a>
+                <a href="#"><img src="image/drawing/2eb1c43c4161b145e345a7413b44701a.jpg" class="img-fluid img-thumbnail"></a>
 
                 <!-- <p class="m-4">Painting</p> -->
               </div>
             </div>
             <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
-                <a href="#"><img src="image/drawing/buddha.jpg" class="img-fluid img-thumbnail"></a>
+                <a href="#"><img src="image/drawing/2eb1c43c4161b145e345a7413b44701a.jpg" class="img-fluid img-thumbnail"></a>
 
               </div>
             </div>
             <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
-                <a href="#"><img src="image/drawing/horse.jpg" class="img-fluid img-thumbnail"></a>
-
-                <!-- <p class="m-4">Painting</p> -->
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="row">
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/drawing/birds.jpg" class="img-fluid img-thumbnail"></a>
-
-
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/drawing/cycle.jpg" class="img-fluid img-thumbnail"></a>
-
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/drawing/laxmirangoli.jpg" class="img-fluid img-thumbnail"></a>
+                <a href="#"><img src="image/drawing/4a684140ee48802ed5693bfce2527071.jpg" class="img-fluid img-thumbnail"></a>
 
                 <!-- <p class="m-4">Painting</p> -->
               </div>
@@ -394,20 +346,68 @@
           <div class="row">
             <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
-                <a href="#"><img src="image/drawing/peacock.jpg" class="img-fluid img-thumbnail"></a>
+                <a href="#"><img src="image/drawing/content-card.jpg" class="img-fluid img-thumbnail"></a>
+
+                <!-- <p class="m-4">Painting</p> -->
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-12">
+              <div class="box">
+                <a href="#"><img src="image/drawing/f3f56bed96bf75e0338bc3ffafd7ade8.jpg" class="img-fluid img-thumbnail"></a>
+
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-12">
+              <div class="box">
+                <a href="#"><img src="image/drawing/maxis.jpg" class="img-fluid img-thumbnail"></a>
+
+                <!-- <p class="m-4">Painting</p> -->
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-12">
+              <div class="box">
+                <a href="#"><img src="image/drawing/myntra--621x414.jpg" class="img-fluid img-thumbnail"></a>
 
 
               </div>
             </div>
             <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
-                <a href="#"><img src="image/drawing/girl.jpg" class="img-fluid img-thumbnail"></a>
+                <a href="#"><img src="image/drawing/1-.jpg" class="img-fluid img-thumbnail"></a>
 
               </div>
             </div>
             <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
-                <a href="#"><img src="image/drawing/flute.jpg" class="img-fluid img-thumbnail"></a>
+                <a href="#"><img src="image/drawing/230345j484098o8uh54w9n.png" class="img-fluid img-thumbnail"></a>
+
+                <!-- <p class="m-4">Painting</p> -->
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-12">
+              <div class="box">
+                <a href="#"><img src="image/drawing/4a684140ee48802ed5693bfce2527071.jpg" class="img-fluid img-thumbnail"></a>
+
+
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-12">
+              <div class="box">
+                <a href="#"><img src="image/drawing/f3f56bed96bf75e0338bc3ffafd7ade8.jpg" class="img-fluid img-thumbnail"></a>
+
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-12">
+              <div class="box">
+                <a href="#"><img src="image/drawing/myntra--621x414.jpg" class="img-fluid img-thumbnail"></a>
 
                 <!-- <p class="m-4">Painting</p> -->
               </div>
