--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             </div>
             <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
-                <a href="#"><img src="image/drawing/2eb1c43c4161b145e345a7413b44701a.jpg" class="img-fluid img-thumbnail"></a>
+                <a href="#"><img src="https://cf.shopee.com.my/file/f3dcf5e41bfd90abf77ae172b651a56f" class="img-fluid img-thumbnail"></a>
 
               </div>
             </div>
