--- a/index.html
+++ b/index.html
@@ -430,15 +430,15 @@
       <div class="row">
         <!-- <div class= "col-lg-12 col-md-12 col-12 "data-aos="fade-in"> -->
         <div id="rotatingart">
-          <figure><img src="image/drawing/season.jpg" class="figure-img img-fluid rounded"></figure>
-          <figure><img src="image/drawing/crown.jpg  " class="figure-img img-fluid rounded"></figure>
-          <figure><img src="image/drawing/radhe.jpg " class="figure-img img-fluid rounded"></figure>
-          <figure><img src="image/drawing/brain.jpg " class="figure-img img-fluid rounded"></figure>
-          <figure><img src="image/drawing/cycle.jpg " class="figure-img img-fluid rounded"></figure>
-          <figure><img src="image/drawing/ganesha.jpg " class="figure-img img-fluid rounded"></figure>
-          <figure><img src="image/drawing/girlsun.jpg " class="figure-img img-fluid rounded"></figure>
-          <figure><img src="image/drawing/mickey.jpg " class="figure-img img-fluid rounded"></figure>
-          <figure><img src="image/drawing/peacockrangoli.jpg " class="figure-img img-fluid rounded"></figure>
+          <figure><img src="https://cf.shopee.com.my/file/f3dcf5e41bfd90abf77ae172b651a56f" class="figure-img img-fluid rounded"></figure>
+          <figure><img src="image/drawing/myntra--621x414.jpg  " class="figure-img img-fluid rounded"></figure>
+          <figure><img src="https://i.pinimg.com/originals/63/47/bd/6347bd452724c37539e2cc7abee975fa.png " class="figure-img img-fluid rounded"></figure>
+          <figure><img src="https://i.ytimg.com/vi/LXUbME8nY5s/maxresdefault.jpg " class="figure-img img-fluid rounded"></figure>
+          <figure><img src="https://dailytimes.com.pk/assets/uploads/2021/04/28/Art-Work.jpg " class="figure-img img-fluid rounded"></figure>
+          <figure><img src="https://www.exchange4media.com/news-photo/115262-103389-MirabaiChanuforAdidas.jpg " class="figure-img img-fluid rounded"></figure>
+          <figure><img src="https://goodnewwws.in/uploads/images/2021/08/image_750x_61265c75a4500.jpg " class="figure-img img-fluid rounded"></figure>
+          <figure><img src="https://www.creativeboom.com/uploads/articles/ce/ce120816af6a22071ed6753e513dfd0f2841532a_810.jpg " class="figure-img img-fluid rounded"></figure>
+          <figure><img src="https://m.media-amazon.com/images/S/stores-image-uploads-na-prod/9/AmazonStores/ATVPDKIKX0DER/a3be6156463a2b4e6d38697f8c385e5d.w1500.h750._CR0%2C0%2C1500%2C750_SX750_SY375_.jpg" class="figure-img img-fluid rounded"></figure>
 
         </div>
       </div>
