--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
   <!-- *************************footer starts***************************************** -->
   <footer class="footersection" id="footerdiv">
     <div class="made mt-5 text-center">
-      <p>Made with ❤️ by Jai Balaji </p>
+      <p>Made with ❤️ by Jai Balaji Raj </p>
     </div>
     <div class="scrolltop float-right">
       <i class="fa fa-arrow-up" onclick=topFunction() id="myBtn"></i>
